--- a/AvaloniaVS.Shared/VSPackage.resx
+++ b/AvaloniaVS.Shared/VSPackage.resx
@@ -135,7 +135,7 @@
     <value>AvaloniaPackage Visual Studio Extension Detailed Info</value>
   </data>
   <data name="113" xml:space="preserve">
-    <value>Avalonia-Lite XAML Editor</value>
+    <value>Avalonia Legacy XAML Editor</value>
   </data>
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\AvaloniaPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
